タイトルと投稿者名の順序を変更

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -6,6 +6,7 @@
                 <tr>
                     <th>ID</th>
                     <th>Title</th>
+                    <th>Name</th>
                     <th>Menu</th>
                 </tr>
             </thead>
@@ -14,6 +15,7 @@
                     <tr>
                         <td><%= question.id %></td>
                         <td><%= link_to question.title, question_path(question) %></td>
+                        <td><%= question.name %></td>
                         <td>[ <%= link_to 'Edit', edit_question_path(question) %> ]
                             
                         [ <%= link_to 'Delete', question_path(question), method: :delete, data:{confirm: 'Are you sure?'}  %> ]
