--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -12,6 +12,6 @@
         <%= f.text_area :content, class:"form-control" %>
     </div>
     <div class="text-center">
-        <%= f.submit "Save" , class:"btn btn-primary" %>
+        <%= f.submit "Save" , class:"btn btn-info" %>
     </div>
 <% end %>
