--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,6 +1,6 @@
 <div>
-    <div class="col-md-4 offset-md-4">
-        <h2 class="text-center">Edit Question</h2>
+    <div class="col-md-12 offset-md-12">
+        <h2 class="text-center bg-info">Edit Question</h2>
         <%= render 'form' %>
     </div>
 </div>
