ナビゲーションバー 導入

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,17 @@
 @import "bootstrap.min" ;
 @import "bootstrap" ;
+
+h1 {
+    color: #17a2b8;
+}
+
+h2 {
+    color: white;
+}
+h3 {
+    color: white;
+}
+
+.navbar-nav a {
+    color: white;
+}
