--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,23 @@
   </head>
 
   <body>
+    <header>
+      <div class="container text-center">
+        <h1>Simple Q&A Service</h1>
+      </div>
+    </header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-info">
+      <div class="container collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item mr-3">
+            <%= link_to 'Top' , root_path %>
+          </li>
+          <li class="nav-item mr-3">
+            <%= link_to 'New' , new_question_path %>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div class="container">
       <% if flash[:notice] %>
         <p class="text-success"><%= flash[:notice] %></p>
