--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,15 +1,21 @@
 <%= form_with model: @question, local:true do |f| %>
-    <div class="form-group">
-        <label>Name</label>
-        <%= f.text_field :name, class:"form-control" %>
+    <div class="form-group row my-3">
+        <label class="col-sm-2">Name</label>
+        <div class="col-sm-10">
+            <%= f.text_field :name, class:"form-control" %>
+        </div>
     </div>
-    <div class="form-group">
-        <label>Title</label>
-        <%= f.text_field :title, class:"form-control" %>
+    <div class="form-group row my-3">
+        <label class="col-sm-2">Title</label>
+        <div class="col-sm-10">
+            <%= f.text_field :title, class:"form-control" %>
+        </div>
     </div>
-    <div class="form-group">
-        <label>Content</label>
-        <%= f.text_area :content, class:"form-control" %>
+    <div class="form-group row my-3">
+        <label class="col-sm-2">Content</label>
+        <div class="col-sm-10">
+            <%= f.text_area :content, class:"form-control" %>
+        </div>
     </div>
     <div class="text-center">
         <%= f.submit "Save" , class:"btn btn-info" %>
