--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,6 +1,6 @@
 <div>
     <div class="col-md-12 offset-md-12">
-        <h2 class="text-center bg-info">Edit Question</h2>
+        <h2 class="text-center bg-info my-3">Edit Question</h2>
         <%= render 'form' %>
     </div>
 </div>
