--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="bg-info my-3">Questions</h2>
+<h2 class="bg-info my-3 text-center">Questions</h2>
 <div class ="row">
     <div class="col-md-12">
         <table class="table table-hover">
