--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,5 @@
 <div>
-    <div class="col-md-12 offset-md-12">
+    <div class="col-md-12 offset-md-12 my-3">
         <h2 class="text-center bg-info">New Question</h2>
         <%= render 'form' %> 
     </div>
