--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <h3 class="bg-info my-3">Posts</h3>
+    <h2 class="bg-info my-3 text-center">Posts</h3>
     <table class="table">
       <thead>
         <tr>
@@ -22,7 +22,7 @@
     </table>
     <hr>
     <div>
-      <h3 class="bg-info">Answer</h3>
+      <h3 class="bg-info text-center">Answer</h3>
       <table class="table table-hover">
         <% if @question.answers.any? %>
           <thead>
@@ -60,7 +60,7 @@
       </table>
     </div>
 
-    <h3 class="bg-info">Post new answer.</h3>
+    <h3 class="bg-info text-center">Post new answer.</h3>
       <%= form_with model: [@question, @answer], local: true do |f| %>
       <%= f.hidden_field :question_id, { value: @question.id} %>
       <div class="form-group">
